--- a/views/upload.html
+++ b/views/upload.html
@@ -9,7 +9,9 @@
       </div>
       <div class="col-md-12 mx-auto mt-2">
           <div class="d-flex flex-column flex-sm-row mt-5">
-            <img src="{{image}}" alt="">
+            <div class="preview-box">
+              <img src="{{image}}" alt="">
+            </div>
           </div>
         </div>
       </div>
