2차 완료 수정

--- a/views/guide3.html
+++ b/views/guide3.html
@@ -43,6 +43,6 @@
   const next = document.querySelector('.next')
   
   back.addEventListener('click', e => location.href = '/guide2');
-  next.addEventListener('click', e => location.href = '/guide3');
+  next.addEventListener('click', e => location.href = '/camera');
 </script>
 {% endblock %}
