--- a/views/camera.html
+++ b/views/camera.html
@@ -19,7 +19,7 @@
         </div>
         <div class="d-flex flex-column flex-sm-row">
           <div class="photo_button">
-            <input type="file" id="input-file" name="input-file" accept="image/*" onchange={handleChange()} hidden/>
+            <input type="file" id="input-file" name="input-file" accept="image/*" multiple onchange={handleChange()} hidden/>
             <label class="btn-upload" for="input-file" role="button">촬영하기</label>
           </div>
           <div class="upload_button">
