--- a/views/layout/layoutMenu.html
+++ b/views/layout/layoutMenu.html
@@ -35,6 +35,10 @@
       <i class="material-icons">payment</i>
       <span class="menu-text">결재하기</span>
     </a>
+    <a href="/login" class="list-group-item menu-text">
+      <i class="material-icons">login</i>
+      <span class="menu-text">로그인</span>
+    </a>
   </ul>
   <div class="navbar fixed-bottom navbar-light bg-light profile">
     <div id="Name">
