--- a/views/login.html
+++ b/views/login.html
@@ -16,8 +16,11 @@
           </div>
           <div class="alert alert-danger alert-dismissible fade mt-3" id="alert"></div>
       </form>
-      <div class="d-flex flex-column flex-sm-row">
+      <div class="d-flex flex-column flex-sm-row mb-3">
         <button class="btn btn-lg btn-primary btn_submit" id="loginBtn">로그인</button>
+      </div>
+      <div class="d-flex flex-column flex-sm-row mt-3">
+        <a href="/signup" class="btn btn-lg btn-primary btn_outline rounded-pill">회원가입</a>
       </div>
   </div>
 </main>
