--- a/views/signup.html
+++ b/views/signup.html
@@ -22,7 +22,7 @@
         <button class="btn btn-lg btn-primary btn_submit" id="signupBtn">생성하기</button>
       </div>
       <div class="d-flex flex-column flex-sm-row mt-3">
-        <button class="btn btn-lg btn-primary btn_outline rounded-pill">이미 계정이 있으신가요? </button>
+        <a href="/login" class="btn btn-lg btn-primary btn_outline rounded-pill">이미 계정이 있으신가요? </a>
       </div>
   </div>
 </main>
